deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pets-auth-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: pets-auth-app
  type: ClusterIP
